Fix for mutated list