@@ -47,6 +47,7 @@ import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
@@ -630,7 +631,7 @@ class ItemMetaMockTest
 	@Test
 	void getLore_LoreChangedAfterSet_LoreNotChanged()
 	{
-		List<String> originalLore = List.of("Hello", "world");
+		List<String> originalLore = Arrays.asList("Hello", "world");
 		meta.setLore(originalLore);
 		originalLore.set(0, "Changed");
 		List<String> lore = meta.getLore();
